--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
-.App {
-  text-align: center;
+html,body{
+  margin: 0;
+  height: 100%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/*SEARCHBAR CSS START*/
+.search-bar{
+  background-color: white;
+  border: none;
+  border-width: 50%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/*SEARCHBAR CSS END*/
+/*HEADER CSS START*/
+.title-header{
+  font-size: 75px;
+  font-family: Verdana, sans-serif;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/*HEADER CSS END*/
+/*CARDS CSS START*/
+.find-btn{
+  background-color: white;
+  color:black;
+  border-color: black;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/*CARDS CSS END*/
