--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,15 @@ html,body{
   margin: 0;
   height: 100%;
 }
+/**/
+.main-container{
+  height: 100%;
+  width: 100%;
+}
+.card-row{
+  padding-top: 70px;
+}
+/**/
 /*SEARCHBAR CSS START*/
 .search-bar{
   background-color: white;
@@ -10,6 +19,9 @@ html,body{
 }
 /*SEARCHBAR CSS END*/
 /*HEADER CSS START*/
+.header-container{
+  padding-top: 90px;
+}
 .title-header{
   font-size: 75px;
   font-family: Verdana, sans-serif;
@@ -20,5 +32,8 @@ html,body{
   background-color: white;
   color:black;
   border-color: black;
+}
+.card-col{
+  padding-bottom: 30px;
 }
 /*CARDS CSS END*/
